objects/Contract_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Fail_Value__c</fullName>
        <label>Auto Fail Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <description>The Default value of the attribute</description>
        <inlineHelpText>The Default value of the attribute</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Auto_Fail__c</fullName>
        <description>Sets the flag to true if the Attribute value equals to Auto Fail Value</description>
        <formula>( Value__c ==  Auto_Fail_Value__c )</formula>
        <inlineHelpText>Indicates if this attribute is an auto fail or not.</inlineHelpText>
        <label>Is Auto Fail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Value_Changed__c</fullName>
        <description>Sets the flag to true if the actual value is different from default value</description>
        <formula>Value__c !=  Default_Value__c</formula>
        <inlineHelpText>Sets the flag to true if the actual value is different from default value</inlineHelpText>
        <label>Is Value Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>The display label name for the attribute</description>
        <inlineHelpText>The display label name for the attribute</inlineHelpText>
        <label>Attribute Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>The attribute name</description>
        <inlineHelpText>The attribute name</inlineHelpText>
        <label>Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The parent opportunity for the attribute</description>
        <inlineHelpText>The parent opportunity for the attribute</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contract Attributes</relationshipLabel>
        <relationshipName>Contract_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The actual value for this attribute</description>
        <inlineHelpText>The actual value for this attribute</inlineHelpText>
        <label>Attribute Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>The attribute weight used to calculate the score</description>
        <inlineHelpText>The attribute weight used to calculate the score</inlineHelpText>
        <label>Attribute Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>This object holds all the attributes for a contract</description>
    <label>Contract Attribute</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Attribute Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>